<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_login_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.jgoodwin.profiler.login.LoginFragment">

    <RelativeLayout
        android:id="@+id/cont_login_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/lbl_login_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_welcome"
            android:layout_marginTop="16dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/lbl_login_email_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:layout_below="@+id/lbl_login_header" />

        <EditText
            style="@style/InputField.Credential.Email"
            android:id="@+id/edt_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:layout_below="@+id/lbl_login_email_sub" />

        <TextView
            android:id="@+id/lbl_login_password_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password"
            android:layout_below="@+id/edt_login_email" />

        <EditText
            style="@style/InputField.Credential.Password"
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_below="@+id/lbl_login_password_sub" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_signin"
            android:layout_below="@+id/edt_login_password" />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:layout_below="@+id/btn_login" />


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pro_login_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>
